# stockflow-pos

./: .env  .env.example  BUILD-GUIDE-ELECTRON.md  DESKTOP-README-ELECTRON.md  auto-git.js  build-desktop.bat  index.html  package-lock.json  package.json  render.yaml  server.js  supabase-auto-confirm.sql  supabase-clear-users.sql  supabase-disable-rls.sql  supabase-rls-fix.sql  supabase-schema-multi-tenant.sql  supabase-schema-safe.sql  supabase-schema.sql  supabase-trigger-signup.sql  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1775756028004-0ef5eee66c15e8.mjs
dev-dist/: sw.js
electron/: main.js  preload.cjs  preload.js
netlify/functions/: charge-momo.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  README.md  generate-icons.ps1  generate-icons.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AdminLayout.tsx  DashboardSidebar.tsx  SplashScreen.tsx  ZRAInvoice.tsx  page-transition.tsx  subscription-banner.tsx  subscription-guard.tsx  subscription-modal.tsx  theme-provider.tsx  theme-toggle.tsx
src/lib/: store-supabase.ts  store.ts  supabase-auth.ts  supabase.ts
src/pages/: AdminDashboard.tsx  AdminLogin.tsx  AdminSignup.tsx  CustomersPage.tsx  ExpensesPage.tsx  Index.tsx  InventoryPage.tsx  MobileMoneyPage.tsx  POSPage.tsx  ReportsPage.tsx  SalesHistoryPage.tsx  SettingsPage.tsx  StaffDashboard.tsx  StaffLogin.tsx  StaffManagementPage.tsx  SuperAdminDashboard.tsx  UploadPage.tsx  ZRADashboard.tsx
stockflow-app/: neutralino.config.json
stockflow-app/www/: index-DuloQ8oF.js  sw.js  (+3 more)
(+1 files in other folders)
