[package]
name = "stockflow-pos"
version = "1.0.0"
description = "StockFlow POS - Inventory Management System"
authors = ["Hakanene Mosely"]
edition = "2021"

[[bin]]
name = "stockflow-pos"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
